# rustsbi-hpm

./: .envrc  .gitignore  Cargo.toml  README.md  build.rs  openocd.cfg  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: extension.rs  loader.rs  main.rs  pmp.rs  riscv_spec.rs  trap.rs  trap_stack.rs
src/board/: clock.rs  femc.rs  mchtmr.rs  mod.rs  pin.rs  uart.rs
