[package]
name = "rustsbi-hpm"
version = "0.1.0"
edition = "2021"

[dependencies]
hpm-metapac = { version = "0.0.3", git = "https://github.com/hpmicro-rs/hpm-metapac.git", tag = "hpm-data-c9fcffe822d42025324b28640051da8a0afb3cfc", features = [
    "hpm6360",
] }
rustsbi = { version = "0.4.0-alpha.3", features = ["machine"] }
sbi-spec = { version = "0.0.7", features = ["legacy"] }
hpm-rt = { git = "https://github.com/hpm-rs/hpm-rt.git", rev = "9957249237231dea1396cf2d696f08ed71451299" }

riscv = "0.10"
spin = "0.9"
fast-trap = { version = "0.0.1", features = ["riscv-m"] }
riscv-decode = "0.2.1"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }

[build-dependencies]
hpm-rt = { git = "https://github.com/hpm-rs/hpm-rt.git", rev = "9957249237231dea1396cf2d696f08ed71451299" }

[features]
ram = []
flash = []

[profile.release]
debug = true
