[package]
name = "rustsbi-hpm"
version = "0.1.0"
edition = "2021"

[dependencies]
hpm-metapac = { version = "0.0.3", git = "https://github.com/hpmicro-rs/hpm-metapac.git", tag = "hpm-data-c9fcffe822d42025324b28640051da8a0afb3cfc", features = [
    "hpm6360",
] }
rustsbi = { version = "0.4.0-alpha.3", features = ["machine"] }
sbi-spec = { version = "0.0.7", features = ["legacy"] }
hpm-rt = { git = "https://github.com/hpm-rs/hpm-rt.git", rev = "f9dd2f2122630ebfa8d9b96f539aba8be1c92784" }

riscv = "0.10"
spin = "0.9"
fast-trap = { version = "0.0.1", features = ["riscv-m"] }
riscv-decode = "0.2.2"

[build-dependencies]
hpm-rt = { git = "https://github.com/hpm-rs/hpm-rt.git", rev = "f9dd2f2122630ebfa8d9b96f539aba8be1c92784" }

[features]
ram = []
flash = []

[profile.release]
debug = true
